force-app/main/default/objects/Case/fields/Motivo_del_Estado__c.field-meta.xml
<CustomField>
    <fullName>Motivo_del_Estado__c</fullName>
    <description>Motivo del cambio de estado del caso, cabecera, dependiente del resultado</description>
    <inlineHelpText>Motivo de cambio de estado del caso (Cabecera)</inlineHelpText>
    <label>Motivo del Estado</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ANULADO CALCULOS ERRONEOS</fullName>
                <label>Anulado Cálculos Erróneos</label>
            </value>
            <value>
                <fullName>ANULADO PROCEDIMIENTO NO FINALIZADO</fullName>
                <label>Anulado Procedimiento No Finalizado</label>
            </value>
            <value>
                <fullName>ANULADO RC/DECLARATIVA</fullName>
                <label>Anulado RC/Declarativa</label>
            </value>
            <value>
                <fullName>CAMBIO TITULAR</fullName>
                <label>Cambio Titular</label>
            </value>
            <value>
                <fullName>CARTA CERTIFICADA</fullName>
                <label>Carta Certificada</label>
            </value>
            <value>
                <fullName>Cerrado</fullName>
            </value>
            <value>
                <fullName>Cerrado cobrado</fullName>
            </value>
            <value>
                <fullName>Cerrado cobrado fraccionado</fullName>
            </value>
            <value>
                <fullName>Cerrado IME</fullName>
            </value>
            <value>
                <fullName>Cerrado IME solicitado</fullName>
            </value>
            <value>
                <fullName>Cerrado jura</fullName>
            </value>
            <value>
                <fullName>Cerrado jura quita</fullName>
            </value>
            <value>
                <fullName>Cerrado Justificante</fullName>
            </value>
            <value>
                <fullName>Cerrado Paralizado</fullName>
            </value>
            <value>
                <fullName>COMUNICACIÓN CON MEDIADOR</fullName>
            </value>
            <value>
                <fullName>Factura Anulada</fullName>
            </value>
            <value>
                <fullName>ILOCALIZADO</fullName>
            </value>
            <value>
                <fullName>NO INTERESA AA</fullName>
            </value>
            <value>
                <fullName>NO INTERESA MEDIADOR</fullName>
            </value>
            <value>
                <fullName>POSIBLE IME</fullName>
                <label>Posible IME</label>
            </value>
            <value>
                <fullName>RC LLAMADA</fullName>
                <label>RC Llamada</label>
            </value>
            <value>
                <fullName>RECORDATORIO</fullName>
                <label>Recordatorio</label>
            </value>
            <value>
                <fullName>SÍ INTERESA AA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>