force-app/main/default/objects/Case/fields/Motivo_del_Estado_Resultado__c.field-meta.xml
<CustomField>
    <fullName>Motivo_del_Estado_Resultado__c</fullName>
    <description>Motivo de cambio de estado del caso Resultado, Dependiente de la Cabecera</description>
    <inlineHelpText>Resultado del Motivo de cambio de estado del Caso</inlineHelpText>
    <label>Motivo del Estado Resultado</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Motivo_del_Estado__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Circunstancias Económicas y personales</fullName>
            </value>
            <value>
                <fullName>Próximo a cancelar, cancelada</fullName>
            </value>
            <value>
                <fullName>Subrogada, novada</fullName>
            </value>
            <value>
                <fullName>Insatisfacción Cliente con AA</fullName>
            </value>
            <value>
                <fullName>Mejora Interés TAE.</fullName>
            </value>
            <value>
                <fullName>Refinanciación o ampliación PH</fullName>
            </value>
            <value>
                <fullName>Extinción de Condominio/Avalista</fullName>
            </value>
            <value>
                <fullName>No viable mediador</fullName>
            </value>
            <value>
                <fullName>No cliente mediador</fullName>
            </value>
            <value>
                <fullName>Facturado</fullName>
            </value>
            <value>
                <fullName>Enviada/Firmada Hoja de Encargo</fullName>
            </value>
            <value>
                <fullName>Contratado Inicia</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>