force-app/main/default/objects/Case/fields/MotivoCitaNoAtendida__c.field-meta.xml
<CustomField>
    <fullName>MotivoCitaNoAtendida__c</fullName>
    <description>Se indica la razón por la que el cliente no acudió a la cita inicial</description>
    <label>Motivo cita no atendida</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Origin</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Atendida posteriormente.</fullName>
                <isActive>false</isActive>
                <label>Atendida posteriormente.</label>
            </value>
            <value>
                <fullName>Cita errónea</fullName>
            </value>
            <value>
                <fullName>Error de asesor en cambio de estado</fullName>
            </value>
            <value>
                <fullName>Indeciso</fullName>
            </value>
            <value>
                <fullName>No ha aceptado GDPR</fullName>
            </value>
            <value>
                <fullName>No le interesa</fullName>
            </value>
            <value>
                <fullName>No localizado</fullName>
            </value>
            <value>
                <fullName>No tiene doc</fullName>
            </value>
            <value>
                <fullName>Recaptura</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>