force-app/main/default/objects/Case/fields/MotivoRechazoSegColegio__c.field-meta.xml
<CustomField>
    <fullName>MotivoRechazoSegColegio__c</fullName>
    <description>Motivo del rechazo del seguro</description>
    <label>Motivo rehuse seguro</label>
    <length>100</length>
    <type>Text</type>
</CustomField>