force-app/main/default/objects/Case/fields/NombreAbogado__c.field-meta.xml
<CustomField>
    <fullName>NombreAbogado__c</fullName>
    <description>En los casos de financiero del tipo venia deben indicar el nombre del abogado contrario</description>
    <label>Nombre del abogado</label>
    <length>255</length>
    <type>Text</type>
</CustomField>