force-app/main/default/objects/Case/fields/NombreContacto__c.field-meta.xml
<CustomField>
    <fullName>NombreContacto__c</fullName>
    <formula>Contact.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre del Contacto</label>
    <type>Text</type>
</CustomField>