force-app/main/default/objects/Case/fields/Numero_de_Factura__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_Factura__c</fullName>
    <label>Número de Factura</label>
    <length>10</length>
    <type>Text</type>
</CustomField>