force-app/main/default/objects/Case/fields/NumeroExpediente__c.field-meta.xml
<CustomField>
    <fullName>NumeroExpediente__c</fullName>
    <description>Los casos que vienen por los formularios web deben de poder indicar el número del expediente por el que están abriendo el caso</description>
    <inlineHelpText>Número Expediente referente al Caso. Dato procedente del Área de Cliente.</inlineHelpText>
    <label>Nº de expediente</label>
    <length>255</length>
    <type>Text</type>
</CustomField>