force-app/main/default/objects/Case/fields/NumeroProcedimiento__c.field-meta.xml
<CustomField>
    <fullName>NumeroProcedimiento__c</fullName>
    <description>En los casos financieros del tipo venia se tiene que indicar el número de procedimiento</description>
    <label>Número procedimiento</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>