force-app/main/default/objects/Case/fields/NumReferenciaSegColegio__c.field-meta.xml
<CustomField>
    <fullName>NumReferenciaSegColegio__c</fullName>
    <description>Número de referencia del seguro</description>
    <label>Nº Referencia del seguro</label>
    <length>50</length>
    <type>Text</type>
</CustomField>