force-app/main/default/objects/Case/fields/NumReferenciaSegEmpresa__c.field-meta.xml
<CustomField>
    <fullName>NumReferenciaSegEmpresa__c</fullName>
    <description>Número de referencia del seguro</description>
    <label>Nº Referencia del seguro</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>