force-app/main/default/objects/Case/fields/OficinaCitaNoAsiste__c.field-meta.xml
<CustomField>
    <fullName>OficinaCitaNoAsiste__c</fullName>
    <description>Oficna de la cita a la que el cliente no asistió</description>
    <label>Oficina de la Cita</label>
    <length>255</length>
    <type>Text</type>
</CustomField>