force-app/main/default/objects/Case/fields/OM_ErrorLog__c.field-meta.xml
<CustomField>
    <fullName>OM_ErrorLog__c</fullName>
    <description>Almacena errores obtenidos al actualizar objetos relacionados (como campo Prioritario en Account).</description>
    <label>Error Log</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>