force-app/main/default/objects/Case/fields/PagoInicial__c.field-meta.xml
<CustomField>
    <fullName>PagoInicial__c</fullName>
    <description>En los casos de tipo financiero se indica como se realiza el pago inicial</description>
    <label>Pago inicial</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PROVISION DE FONDOS</fullName>
            </value>
            <value>
                <fullName>Apertura expediente</fullName>
            </value>
            <value>
                <fullName>Gestiones previas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>