force-app/main/default/objects/Case/fields/ParteArriagaAsociadosLiberty__c.field-meta.xml
<CustomField>
    <fullName>ParteArriagaAsociadosLiberty__c</fullName>
    <description>Se muestra el documento de parte de declaración de siniestro</description>
    <formula>HYPERLINK(&apos;https://arriagaasociados--partial--c.documentforce.com/servlet/servlet.FileDownload?file=0151x000000784D&apos; , &apos;Ver&apos;, &apos;_blank&apos;)</formula>
    <label>Parte Arriaga Asociados Liberty</label>
    <type>Text</type>
</CustomField>