force-app/main/default/objects/Case/fields/ParteJesusMariaICAM__c.field-meta.xml
<CustomField>
    <fullName>ParteJesusMariaICAM__c</fullName>
    <description>Se muestra el documento del parte de jesus maría para los casos de riesgo</description>
    <formula>HYPERLINK(&apos;https://arriagaasociados--partial--c.documentforce.com/servlet/servlet.FileDownload?file=0151x000000784E&apos;, &apos;Ver&apos; , &apos;_blank&apos;)</formula>
    <label>Parte Jesus Maria ICAM</label>
    <type>Text</type>
</CustomField>