force-app/main/default/objects/Case/fields/ParteJoseMariaICAM__c.field-meta.xml
<CustomField>
    <fullName>ParteJoseMariaICAM__c</fullName>
    <description>Se muestra el documento del parte de José MAría ICAM para los casos de riesgos</description>
    <formula>HYPERLINK(&apos;https://arriagaasociados--partial--c.documentforce.com/servlet/servlet.FileDownload?file=0151x000000784F&apos;,  &apos;Ver&apos; , &apos;_blank&apos;)</formula>
    <label>Parte José María ICAM</label>
    <type>Text</type>
</CustomField>