force-app/main/default/objects/Case/fields/Paygold__c.field-meta.xml
<CustomField>
    <fullName>Paygold__c</fullName>
    <description>Paygold</description>
    <label>Paygold</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No corresponde</fullName>
            </value>
            <value>
                <fullName>Enviado</fullName>
            </value>
            <value>
                <fullName>Pendiente</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>