force-app/main/default/objects/Case/fields/PendientePicklist__c.field-meta.xml
<CustomField>
    <fullName>PendientePicklist__c</fullName>
    <description>Picklist donde se indica porque esta pendiente la incidencia del tipo Siniestro</description>
    <label>Pendiente de:</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pendiente Colegio</fullName>
            </value>
            <value>
                <fullName>Pendiente Empresa Seguro</fullName>
            </value>
            <value>
                <fullName>Pendiente Colegio y Empresa Seguro</fullName>
            </value>
            <value>
                <fullName>Pendiente Cliente</fullName>
            </value>
            <value>
                <fullName>Pendiente Juzgado</fullName>
            </value>
            <value>
                <fullName>Pendiente Procurador</fullName>
            </value>
            <value>
                <fullName>Pendiente Arriaga (otro dpto AA - no Riesgos)</fullName>
            </value>
            <value>
                <fullName>Pendiente Parte</fullName>
            </value>
            <value>
                <fullName>Pendiente Otro (ninguno de los anteriores)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>