force-app/main/default/objects/Case/fields/ProbabilidadSiniestro__c.field-meta.xml
<CustomField>
    <fullName>ProbabilidadSiniestro__c</fullName>
    <description>Probabilidad de éxito en el caso</description>
    <label>Probabilidad</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Probable &gt;90%</fullName>
            </value>
            <value>
                <fullName>Posible &lt;90% y &gt;50%</fullName>
            </value>
            <value>
                <fullName>Poco probable &lt;50%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>