force-app/main/default/objects/Case/fields/Producto_Expediente__c.field-meta.xml
<CustomField>
    <fullName>Producto_Expediente__c</fullName>
    <label>Producto Expediente</label>
    <length>50</length>
    <type>Text</type>
</CustomField>