force-app/main/default/objects/Case/fields/Propuesta__c.field-meta.xml
<CustomField>
    <fullName>Propuesta__c</fullName>
    <description>En los casos del tipo financiero se indica el tipo de propuesta que se está realizando</description>
    <label>Propuesta</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Verbal</fullName>
            </value>
            <value>
                <fullName>Carta</fullName>
            </value>
            <value>
                <fullName>Mail</fullName>
            </value>
            <value>
                <fullName>Nueva oferta</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>