force-app/main/default/objects/Case/fields/PropuestaPagoPolizaColegio__c.field-meta.xml
<CustomField>
    <fullName>PropuestaPagoPolizaColegio__c</fullName>
    <description>Propuesta de pago de la póliza</description>
    <label>Propuesta de pago poliza</label>
    <length>100</length>
    <type>Text</type>
</CustomField>