force-app/main/default/objects/Case/fields/ReplicaEmpresa__c.field-meta.xml
<CustomField>
    <fullName>ReplicaEmpresa__c</fullName>
    <description>Réplica de la empresa</description>
    <label>Réplica</label>
    <length>100</length>
    <type>Text</type>
</CustomField>