force-app/main/default/objects/Case/fields/ResponsablePago__c.field-meta.xml
<CustomField>
    <fullName>ResponsablePago__c</fullName>
    <description>Indica quien se encarga de realizar el pago del siniestro</description>
    <label>Responsable del pago</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ONION</fullName>
            </value>
            <value>
                <fullName>FRAILE MENA</fullName>
            </value>
            <value>
                <fullName>ARRIAGA</fullName>
            </value>
            <value>
                <fullName>Colegio de Abogados</fullName>
            </value>
            <value>
                <fullName>Empresa de seguros</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>