force-app/main/default/objects/Case/fields/Resultado__c.field-meta.xml
<CustomField>
    <fullName>Resultado__c</fullName>
    <description>Resultado obtenido del caso</description>
    <label>Resultado</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CONFIRMADA TELEFÓNICAMENTE</fullName>
            </value>
            <value>
                <fullName>CONFIRMADA POR EMAIL</fullName>
            </value>
            <value>
                <fullName>CAMBIA CITA</fullName>
            </value>
            <value>
                <fullName>ANULA CITA</fullName>
            </value>
            <value>
                <fullName>DATOS DE CONTACTO INSUFICIENTES/INCORRECTO</fullName>
            </value>
            <value>
                <fullName>No le interesa</fullName>
            </value>
            <value>
                <fullName>No tiene doc</fullName>
            </value>
            <value>
                <fullName>Cita errónea</fullName>
            </value>
            <value>
                <fullName>No ha aceptado GDPR</fullName>
            </value>
            <value>
                <fullName>Recaptura</fullName>
            </value>
            <value>
                <fullName>Nueva Cita</fullName>
            </value>
            <value>
                <fullName>No volver a llamar</fullName>
            </value>
            <value>
                <fullName>Resuelto</fullName>
            </value>
            <value>
                <fullName>Duplicada</fullName>
            </value>
            <value>
                <fullName>No es queja</fullName>
            </value>
            <value>
                <fullName>Incidencia</fullName>
            </value>
            <value>
                <fullName>Fallido</fullName>
            </value>
            <value>
                <fullName>No es incidencia</fullName>
            </value>
            <value>
                <fullName>Siniestro</fullName>
            </value>
            <value>
                <fullName>Negativo</fullName>
            </value>
            <value>
                <fullName>Positivo</fullName>
            </value>
            <value>
                <fullName>Aceptado</fullName>
            </value>
            <value>
                <fullName>Rechazado</fullName>
            </value>
            <value>
                <fullName>No acuerdo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>