force-app/main/default/objects/Case/fields/ReviewUrl__c.field-meta.xml
<CustomField>
    <fullName>ReviewUrl__c</fullName>
    <label>ReviewUrl</label>
    <type>Url</type>
</CustomField>