force-app/main/default/objects/Case/fields/RiesgoHE__c.field-meta.xml
<CustomField>
    <fullName>RiesgoHE__c</fullName>
    <description>En los casos del tipo financiero se indica quien tiene el riesgo</description>
    <label>Riesgo HE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cliente</fullName>
            </value>
            <value>
                <fullName>Arriaga</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>