force-app/main/default/objects/Case/fields/SendEmail__c.field-meta.xml
<CustomField>
    <fullName>SendEmail__c</fullName>
    <label>Encuesta TrustPilot</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Si</fullName>
                <label>Si, enviar encuesta</label>
            </value>
            <value>
                <fullName>No</fullName>
                <label>No, no enviar encuesta</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>