force-app/main/default/objects/Case/fields/TelefonoAbogado__c.field-meta.xml
<CustomField>
    <fullName>TelefonoAbogado__c</fullName>
    <description>En los casos de financiero del tipo venia se indica el teléfono del abogado de la parte contraria</description>
    <label>Teléfono del abogado</label>
    <type>Phone</type>
</CustomField>