force-app/main/default/objects/Case/fields/Terceros__c.field-meta.xml
<CustomField>
    <fullName>Terceros__c</fullName>
    <description>Muestra a qué departamento se ha derivado la gestión del caso de ATC</description>
    <inlineHelpText>Muestra a qué departamento se ha derivado la gestión del caso de ATC</inlineHelpText>
    <label>Terceros</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ASESORIA COMERCIAL</fullName>
            </value>
            <value>
                <fullName>CALL CENTER</fullName>
            </value>
            <value>
                <fullName>COBRO</fullName>
            </value>
            <value>
                <fullName>EJECUCIONES</fullName>
            </value>
            <value>
                <fullName>FINANCIERO</fullName>
            </value>
            <value>
                <fullName>MARKETING</fullName>
            </value>
            <value>
                <fullName>OION</fullName>
            </value>
            <value>
                <fullName>OTROS</fullName>
            </value>
            <value>
                <fullName>PROCESAL</fullName>
            </value>
            <value>
                <fullName>PRODUCCIÓN</fullName>
            </value>
            <value>
                <fullName>RECOBRO</fullName>
            </value>
            <value>
                <fullName>RESOLUCIONES</fullName>
            </value>
            <value>
                <fullName>RESPONSABLES</fullName>
            </value>
            <value>
                <fullName>RIESGOS</fullName>
            </value>
            <value>
                <fullName>SSJJ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>