force-app/main/default/objects/Case/fields/Tipo_Cuenta__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Cuenta__c</fullName>
    <label>Tipo Cuenta</label>
    <length>50</length>
    <type>Text</type>
</CustomField>