force-app/main/default/objects/Case/fields/TipoCliente__c.field-meta.xml
<CustomField>
    <fullName>TipoCliente__c</fullName>
    <description>Para los usuarios de la comunidad se necesita mostrar una tipología de caso diferente a los tipos de casos</description>
    <label>Tipo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Solicitar información sobre un expediente</fullName>
            </value>
            <value>
                <fullName>Solicitar información sobre plazos</fullName>
            </value>
            <value>
                <fullName>Solicitar documentación de un expediente</fullName>
            </value>
            <value>
                <fullName>Solicitar información sobre un producto no contratado</fullName>
            </value>
            <value>
                <fullName>Informar sobre un problema</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>