force-app/main/default/objects/Case/fields/TipoDeCierre__c.field-meta.xml
<CustomField>
    <fullName>TipoDeCierre__c</fullName>
    <description>En los casos del tipo financiero se indica el tipo de cierre</description>
    <label>Tipo de cierre</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aceptado</fullName>
            </value>
            <value>
                <fullName>Rechazado</fullName>
            </value>
            <value>
                <fullName>No acuerdo</fullName>
            </value>
            <value>
                <fullName>Desistido</fullName>
            </value>
            <value>
                <fullName>Reconducido</fullName>
            </value>
            <value>
                <fullName>No desistimiento</fullName>
            </value>
            <value>
                <fullName>Gestionado</fullName>
            </value>
            <value>
                <fullName>Cobrado</fullName>
            </value>
            <value>
                <fullName>No procede</fullName>
            </value>
            <value>
                <fullName>Resuelto</fullName>
            </value>
            <value>
                <fullName>Duplicada</fullName>
            </value>
            <value>
                <fullName>No es queja</fullName>
            </value>
            <value>
                <fullName>Incidencia</fullName>
            </value>
            <value>
                <fullName>Siniestro</fullName>
            </value>
            <value>
                <fullName>Fallido</fullName>
            </value>
            <value>
                <fullName>No es Incidencia</fullName>
            </value>
            <value>
                <fullName>Positivo</fullName>
            </value>
            <value>
                <fullName>Negativo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>