force-app/main/default/objects/Case/fields/TipoHonorarios__c.field-meta.xml
<CustomField>
    <fullName>TipoHonorarios__c</fullName>
    <description>Para los casos de financiero se indica el tipo de honorarios</description>
    <label>Tipo honorarios</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>%</fullName>
            </value>
            <value>
                <fullName>COA</fullName>
            </value>
            <value>
                <fullName>Fijo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>