force-app/main/default/objects/Case/fields/TotalPagoEmpCol__c.field-meta.xml
<CustomField>
    <fullName>TotalPagoEmpCol__c</fullName>
    <description>Suma del pago de colegio y empresa</description>
    <label>Total pago colegio + empresa</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>