force-app/main/default/objects/Case/fields/TotalPropuestaEmpCol__c.field-meta.xml
<CustomField>
    <fullName>TotalPropuestaEmpCol__c</fullName>
    <description>Suma de las propuesta de colegio y empresa</description>
    <label>Total propuesta de pago colegio + empres</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>