force-app/main/default/objects/Case/recordTypes/ATC.recordType-meta.xml
<RecordType>
    <fullName>ATC</fullName>
    <active>true</active>
    <businessProcess>ATC</businessProcess>
    <description>Casos de Atención al Cliente</description>
    <label>ATC</label>
</RecordType>