force-app/main/default/objects/Case/recordTypes/Call_Center_Recaptura.recordType-meta.xml
<RecordType>
    <fullName>Call_Center_Recaptura</fullName>
    <active>true</active>
    <businessProcess>Call Center</businessProcess>
    <description>Call Center - Casos que incluye las citas no atendidas y las recapturas</description>
    <label>Call Center Recaptura</label>
</RecordType>