force-app/main/default/objects/Case/recordTypes/CallCenter.recordType-meta.xml
<RecordType>
    <fullName>CallCenter</fullName>
    <active>true</active>
    <businessProcess>Call Center</businessProcess>
    <description>Tipo de registro para casos de Call Center vía email</description>
    <label>Call Center General</label>
</RecordType>