force-app/main/default/objects/Case/recordTypes/CallCenterConfirmacionCita.recordType-meta.xml
<RecordType>
    <fullName>CallCenterConfirmacionCita</fullName>
    <active>true</active>
    <businessProcess>Call Center</businessProcess>
    <description>Call Center - Casos de confirmación de cita</description>
    <label>Call Center Confirmación de cita</label>
</RecordType>