force-app/main/default/objects/Case/recordTypes/Ejecuciones.recordType-meta.xml
<RecordType>
    <fullName>Ejecuciones</fullName>
    <active>true</active>
    <businessProcess>Ejecuciones</businessProcess>
    <description>Tipo de Caso para comunicaciones cliente por parte de ejecuciones</description>
    <label>Ejecuciones</label>
</RecordType>