force-app/main/default/objects/Case/recordTypes/Financiero.recordType-meta.xml
<RecordType>
    <fullName>Financiero</fullName>
    <active>true</active>
    <businessProcess>Financiero Resoluciones</businessProcess>
    <description>Financiero / Resoluciones - Casos de Acuerdo, Desistimiento y Venia</description>
    <label>Financiero / Resoluciones</label>
</RecordType>