force-app/main/default/objects/Case/recordTypes/Financiero_Recobros.recordType-meta.xml
<RecordType>
    <fullName>Financiero_Recobros</fullName>
    <active>true</active>
    <businessProcess>Financiero Recobros</businessProcess>
    <description>Casos de Gestión de recobros</description>
    <label>Financiero Recobros</label>
</RecordType>