force-app/main/default/objects/Case/recordTypes/FinancieroGestionCobros.recordType-meta.xml
<RecordType>
    <fullName>FinancieroGestionCobros</fullName>
    <active>true</active>
    <businessProcess>Financiero Cobros</businessProcess>
    <description>Financiero - Casos de Gestión de cobros</description>
    <label>Financiero Gestión cobros</label>
</RecordType>