force-app/main/default/objects/Case/recordTypes/FinancieroResoluciones.recordType-meta.xml
<RecordType>
    <fullName>FinancieroResoluciones</fullName>
    <active>false</active>
    <businessProcess>Financiero Resoluciones</businessProcess>
    <description>Financiero - Casos de Resoluciones</description>
    <label>Financiero - Resoluciones</label>
</RecordType>