force-app/main/default/objects/Case/recordTypes/Incidencias.recordType-meta.xml
<RecordType>
    <fullName>Incidencias</fullName>
    <active>true</active>
    <businessProcess>Incidencias</businessProcess>
    <description>Riesgos - Casos de tipo Incidencia</description>
    <label>Incidencias</label>
</RecordType>