force-app/main/default/objects/Case/recordTypes/Procesal.recordType-meta.xml
<RecordType>
    <fullName>Procesal</fullName>
    <active>true</active>
    <businessProcess>Procesal</businessProcess>
    <description>Tipo de Caso para comunicaciones cliente por parte de Procesal</description>
    <label>Procesal</label>
</RecordType>