force-app/main/default/objects/Case/recordTypes/Procesos_Internos_Arriaga.recordType-meta.xml
<RecordType>
    <fullName>Procesos_Internos_Arriaga</fullName>
    <active>true</active>
    <businessProcess>Procesos Arriaga</businessProcess>
    <description>Procesos Arriaga en el envío de comunicaciones al cliente con diferente propósito</description>
    <label>Procesos Internos Arriaga</label>
</RecordType>