force-app/main/default/objects/Case/recordTypes/Quejas.recordType-meta.xml
<RecordType>
    <fullName>Quejas</fullName>
    <active>false</active>
    <businessProcess>Queja</businessProcess>
    <description>Riesgos - Casos de tipo Queja</description>
    <label>Quejas</label>
</RecordType>