force-app/main/default/objects/Case/recordTypes/Renegociacion_PH.recordType-meta.xml
<RecordType>
    <fullName>Renegociacion_PH</fullName>
    <active>true</active>
    <businessProcess>Renegociación PH</businessProcess>
    <description>Renegociación PH , Proyecto Inicia</description>
    <label>Renegociación PH</label>
</RecordType>