force-app/main/default/objects/Case/recordTypes/Siniestro.recordType-meta.xml
<RecordType>
    <fullName>Siniestro</fullName>
    <active>true</active>
    <businessProcess>Siniestro</businessProcess>
    <description>Riesgos - Incidencias/ Quejas que no han podido resolverse y han pasado a siniestros</description>
    <label>Siniestro</label>
</RecordType>