force-app/main/default/objects/Case/validationRules/Encuesta_Seleccionada.validationRule-meta.xml
<ValidationRule>
    <fullName>Encuesta_Seleccionada</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
				OR(
				    RecordType.DeveloperName = &quot;ATC&quot;,
								RecordType.DeveloperName = &quot;Procesal&quot;
				) ,
				ISPICKVAL( Status , &quot;Cerrado&quot; ) ,
				ISPICKVAL(SendEmail__c, &quot;&quot;)
)</errorConditionFormula>
    <errorMessage>Para cerrar el Caso es necessario seleccionar un valor para el campo Encuesta.</errorMessage>
</ValidationRule>